Fix for displaying avatar on Firefox and Safari

--- a/src/styles.css
+++ b/src/styles.css
@@ -63,6 +63,7 @@ body {
 #wrapper #cards #links {
    grid-area: links;
    display: flex;
+   align-items: center;
    justify-content: flex-start;
    width: 100%;
    height: 100%;
@@ -70,7 +71,7 @@ body {
    background: #1c1b1d;
    text-align: center;
    white-space: nowrap;
-   overflow: auto;
+   overflow: hidden;
 }
 
 #wrapper #cards #links .button {
@@ -90,8 +91,7 @@ body {
 
 #wrapper #cards #avatar {
    grid-area: avatar;
-   max-width: max-content;
-   aspect-ratio: 1;
+   min-width: 182px;
    background-image: url("../assets/images/avatar.jpg");
    background-size: cover;
    background-position: center;
@@ -120,6 +120,6 @@ body {
    }
 
    #wrapper #cards #avatar {
-      max-width: unset;
+      aspect-ratio: 1;
    }
 }
